--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,14 @@
     <string name="btn_saveNote_txt">Guardar nota</string>
     <string name="txtInput_AddNote">Escribe tu nota aquí…</string>
     <string name="btn_cancel_txt">Cancelar</string>
+    <string name="app_icon">Notites icono</string>
+    <string name="app_dev">Víctor Muñoz</string>
+    <string name="background">fondo de pantalla</string>
+    <string name="failed_add">Nota obligatoria</string>
+    <string name="successful_add">Nota creada correctamente</string>
+    <string name="btn_deleteAllNotes">Eliminar TODAS las notas</string>
+    <string name="txt_deleteAllNotes">¿Estás seguro de que quieres eliminar todas las notas?</string>
+    <string name="h1_NoteInfo">Información de la nota</string>
+    <string name="btn_DeleteNote">Borrar nota</string>
 
 </resources>
